err/rump.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/coid-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/netaddr'...
Listing './lib/python3.5/site-packages/netaddr/contrib'...
Listing './lib/python3.5/site-packages/netaddr/eui'...
Listing './lib/python3.5/site-packages/netaddr/ip'...
Listing './lib/python3.5/site-packages/netaddr/strategy'...
Listing './lib/python3.5/site-packages/netaddr-0.7.19.dist-info'...
Listing './lib/python3.5/site-packages/ohmr-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pilo'...
Compiling './lib/python3.5/site-packages/pilo/fields.py'...
***   File "./lib/python3.5/site-packages/pilo/fields.py", line 449
    except (SourceError, ValueError), ex:
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pilo/source'...
Listing './lib/python3.5/site-packages/pilo-0.5.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/rump'...
Compiling './lib/python3.5/site-packages/rump/cli.py'...
***   File "./lib/python3.5/site-packages/rump/cli.py", line 197
    print 'router changed -', router.name
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/rump/exp'...
Listing './lib/python3.5/site-packages/rump/parser'...
Compiling './lib/python3.5/site-packages/rump/parser/match.py'...
***   File "./lib/python3.5/site-packages/rump/parser/match.py", line 304
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rump/router'...
Compiling './lib/python3.5/site-packages/rump/router/__init__.py'...
***   File "./lib/python3.5/site-packages/rump/router/__init__.py", line 116
    except re.error, ex:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rump/rule.py'...
***   File "./lib/python3.5/site-packages/rump/rule.py", line 229
    except exc.ParseException, ex:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rump/wsgi.py'...
***   File "./lib/python3.5/site-packages/rump/wsgi.py", line 77
    except rump.exc.ParseException, ex:
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rump-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/wsgim_rip-0.1.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
